--- a/update.html
+++ b/update.html
@@ -136,5 +136,5 @@
 			<li>Fixed some bug</li>
 		</ul>
 	</body>
-	<footer>Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi </footer>
+			<footer><center>Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi</center></footer>
 </html>
