--- a/update.html
+++ b/update.html
@@ -18,7 +18,7 @@
 		<hr>
 		<h3><font color="##1DABB8"><font face="verdana">Update List</font></h4>
 		
-																<!--- VERSION V1.0.1.8 -->
+				<!--- VERSION V1.0.1.8 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.8</font></h4>
 		<ul>
 			<li>Add Free & Premium Version</li>
@@ -28,7 +28,7 @@
 			<li>Removing Donate Page</li>
 		</ul>
 		
-																<!--- VERSION V1.0.1.6 -->
+				<!--- VERSION V1.0.1.6 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.6</font></h4>
 		<ul>
 			<li>Available 11 Attachment File</li>
@@ -37,20 +37,20 @@
 			<li>Optimized Version Checker</li>
 		</ul>
 		
-																<!--- VERSION V1.0.1.5 -->
+				<!--- VERSION V1.0.1.5 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.5</font></h4>
 		<ul>
 			<li>Add Multiple Target Options</li>
 			<li>Fixed some bug</li>
 		</ul>
 		
-																		<!--- VERSION V1.0.1.4-->
+				<!--- VERSION V1.0.1.4-->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.4</font></h4>
 		<ul>
 			<li>Removing a Naughtiness Tricks</li>
 		</ul>
 		
-																<!--- VERSION V1.0.1.3 -->
+				<!--- VERSION V1.0.1.3 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.3</font></h4>
 		<ul>
 			<li>Change Button Style to Rounded</li>
@@ -61,13 +61,13 @@
 			<li>Add Notification Success</li>
 		</ul>
 		
-																<!--- VERSION V1.0.1.2 -->
+				<!--- VERSION V1.0.1.2 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.2</font></h4>
 		<ul>
 			<li>Fixed Attachment Bug</li>
 		</ul>
 		
-														<!--- VERSION V1.0.1.1 -->
+				<!--- VERSION V1.0.1.1 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.1</font></h4>
 		<ul>
 			<li>Fixed Some Bug In Attachment</li>
@@ -77,13 +77,13 @@
 			<li>Greater Layout Size</li>
 		</ul>
 		
-														<!--- VERSION V1.0.1.0 -->
+				<!--- VERSION V1.0.1.0 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.0</font></h4>
 		<ul>
 			<li>Fixed Crash When Sending Mail</li>
 		</ul>
 		
-												<!--- VERSION V1.0.0.8 -->
+				<!--- VERSION V1.0.0.8 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.8</font></h4>
 		<ul>
 			<li>Add Hide/Change Sender Name</li>
@@ -95,7 +95,7 @@
 			<li>Fixed Freeze when Send Mail</li>
 		</ul>
 		
-										<!--- VERSION V1.0.0.6 -->
+				<!--- VERSION V1.0.0.6 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.6</font></h4>
 		<ul>
 			<li>Moving Attachment Location</li>
@@ -104,7 +104,7 @@
 			<li>Set Max Amount to 50</li>
 		</ul>
 		
-								<!--- VERSION V1.0.0.5 -->
+				<!--- VERSION V1.0.0.5 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.5</font></h4>
 		<ul>
 			<li>Add Multiple Attachment File</li>
@@ -112,7 +112,7 @@
 			<li>Add Progressbar Stats</li>
 		</ul>
 		
-						<!--- VERSION V1.0.0.4 -->
+				<!--- VERSION V1.0.0.4 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.4</font></h4>
 		<ul>
 			<li>Change Full Style</li>
@@ -136,5 +136,5 @@
 			<li>Fixed some bug</li>
 		</ul>
 	</body>
-			<footer><center>Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi</center></footer>
+	<footer><center><font size="3">Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi </font></center></footer>
 </html>
