--- a/update.html
+++ b/update.html
@@ -21,11 +21,11 @@
 				<!--- VERSION V1.0.1.8 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.8</font></h4>
 		<ul>
-			<li>Add Free & Premium Version</li>
-			<li>Add Serial Activation</li>
-			<li>Add Submenu in Settings</li>
-			<li>Add Update Page</li>
-			<li>Removing Donate Page</li>
+			<li><font face="verdana" font size="3">Add Free & Premium Version</font></li>
+			<li><font face="verdana" font size="3">Add Serial Activation</font></li>
+			<li><font face="verdana" font size="3">Add Submenu in Settings</font></li>
+			<li><font face="verdana" font size="3">Add Update Page</font></li>
+			<li><font face="verdana" font size="3">Removing Donate Page</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.6 -->
