--- a/update.html
+++ b/update.html
@@ -11,7 +11,7 @@
 	<head>
 		<title>Navillera Mail Update Changelog</title>
 		<h2><font color="##1DABB8"><font face="verdana">Navillera Mail Update Changelog</font></h2>
-		<font color=white>This is a page for Navillera Mail update changelog. Every changelog will be showed here.</font>
+		<font color=white font face="verdana">This is a page for Navillera Mail update changelog. Every changelog will be showed here.</font>
 		
 	</head>
 	<body>
@@ -31,109 +31,109 @@
 				<!--- VERSION V1.0.1.6 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.6</font></h4>
 		<ul>
-			<li>Available 11 Attachment File</li>
-			<li>Add Attachment Options</li>
-			<li>Optimized Script</li>
-			<li>Optimized Version Checker</li>
+			<li><font face="verdana" font size="3">Available 11 Attachment File</font></li>
+			<li><font face="verdana" font size="3">Add Attachment Options</font></li>
+			<li><font face="verdana" font size="3">Optimized Script</font></li>
+			<li><font face="verdana" font size="3">Optimized Version Checker</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.5 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.5</font></h4>
 		<ul>
-			<li>Add Multiple Target Options</li>
-			<li>Fixed some bug</li>
+			<li><font face="verdana" font size="3">Add Multiple Target Options</font></li>
+			<li><font face="verdana" font size="3">Fixed some bug</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.4-->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.4</font></h4>
 		<ul>
-			<li>Removing a Naughtiness Tricks</li>
+			<li><font face="verdana" font size="3">Removing a Naughtiness Tricks</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.3 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.3</font></h4>
 		<ul>
-			<li>Change Button Style to Rounded</li>
-			<li>Change Amount Value to Trackbar</li>
-			<li>Disable SMTP Options When Use Default Account</li>
-			<li>Fixed Feedback Bug</li>
-			<li>Add New Icon</li>
-			<li>Add Notification Success</li>
+			<li><font face="verdana" font size="3">Change Button Style to Rounded</font></li>
+			<li><font face="verdana" font size="3">Change Amount Value to Trackbar</font></li>
+			<li><font face="verdana" font size="3">Disable SMTP Options When Use Default Account</font></li>
+			<li><font face="verdana" font size="3">Fixed Feedback Bug</font></li>
+			<li><font face="verdana" font size="3">Add New Icon</font></li>
+			<li><font face="verdana" font size="3">Add Notification Success</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.2 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.2</font></h4>
 		<ul>
-			<li>Fixed Attachment Bug</li>
+			<li><font face="verdana" font size="3">Fixed Attachment Bug</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.1 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.1</font></h4>
 		<ul>
-			<li>Fixed Some Bug In Attachment</li>
-			<li>Add Feedback to Developer</li>
-			<li>Add Rating Star Feedback</li>
-			<li>Set Maximum Amount to 200</li>
-			<li>Greater Layout Size</li>
+			<li><font face="verdana" font size="3">Fixed Some Bug In Attachment</font></li>
+			<li><font face="verdana" font size="3">Add Feedback to Developer</font></li>
+			<li><font face="verdana" font size="3">Add Rating Star Feedback</font></li>
+			<li><font face="verdana" font size="3">Set Maximum Amount to 200</font></li>
+			<li><font face="verdana" font size="3">Greater Layout Size</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.0 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.0</font></h4>
 		<ul>
-			<li>Fixed Crash When Sending Mail</li>
+			<li><font face="verdana" font size="3">Fixed Crash When Sending Mail</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.8 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.8</font></h4>
 		<ul>
-			<li>Add Hide/Change Sender Name</li>
-			<li>Add Gold, Woman Style, Moccasin Theme</li>
-			<li>Add Stop Function</li>
-			<li>Add Auto Update Features!</li>
-			<li>Add News Information</li>
-			<li>Add Multiple Target</li>
-			<li>Fixed Freeze when Send Mail</li>
+			<li><font face="verdana" font size="3">Add Hide/Change Sender Name</font></li>
+			<li><font face="verdana" font size="3">Add Gold, Woman Style, Moccasin Theme</font></li>
+			<li><font face="verdana" font size="3">Add Stop Function</font></li>
+			<li><font face="verdana" font size="3">Add Auto Update Features!</font></li>
+			<li><font face="verdana" font size="3">Add News Information</font></li>
+			<li><font face="verdana" font size="3">Add Multiple Target</font></li>
+			<li><font face="verdana" font size="3">Fixed Freeze when Send Mail</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.6 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.6</font></h4>
 		<ul>
-			<li>Moving Attachment Location</li>
-			<li>Add Theme Settings</li>
-			<li>Fixed some bug</li>
-			<li>Set Max Amount to 50</li>
+			<li><font face="verdana" font size="3">Moving Attachment Location</font></li>
+			<li><font face="verdana" font size="3">Add Theme Settings</font></li>
+			<li><font face="verdana" font size="3">Fixed some bug</font></li>
+			<li><font face="verdana" font size="3">Set Max Amount to 50</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.5 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.5</font></h4>
 		<ul>
-			<li>Add Multiple Attachment File</li>
-			<li>Add Account Selector</li>
-			<li>Add Progressbar Stats</li>
+			<li><font face="verdana" font size="3">Add Multiple Attachment File</font></li>
+			<li><font face="verdana" font size="3">Add Account Selector</font></li>
+			<li><font face="verdana" font size="3">Add Progressbar Stats</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.4 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.4</font></h4>
 		<ul>
-			<li>Change Full Style</li>
-			<li>Fixed HTML Message Blank</li>
-			<li>Fixed some bug</li>
-			<li>Add some little features</li>
+			<li><font face="verdana" font size="3">Change Full Style</font></li>
+			<li><font face="verdana" font size="3">Fixed HTML Message Blank</font></li>
+			<li><font face="verdana" font size="3">Fixed some bug</font></li>
+			<li><font face="verdana" font size="3">Add some little features</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.3 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.3</font></h4>
 		<ul>
-			<li>Removed Identity Soft</li>
-			<li>Removed Flood Number Text</li>
+			<li><font face="verdana" font size="3">Removed Identity Soft</font></li>
+			<li><font face="verdana" font size="3">Removed Flood Number Text</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.2 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.2</font></h4>
 		<ul>
-			<li>Add color to Connectivity Stats</li>
-			<li>Fixed some bad english</li>
-			<li>Fixed some bug</li>
+			<li><font face="verdana" font size="3">Add color to Connectivity Stats</font></li>
+			<li><font face="verdana" font size="3">Fixed some bad english</font></li>
+			<li><font face="verdana" font size="3">Fixed some bug</font></li>
 		</ul>
 	</body>
 	<footer><center><font size="3">Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi </font></center></footer>
