--- a/update.html
+++ b/update.html
@@ -136,5 +136,5 @@
 			<li><font face="verdana" font size="3">Fixed some bug</font></li>
 		</ul>
 	</body>
-	<footer><center><font size="3">Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi </font></center></footer>
+	<footer><center><font size="3" font face="verdana">Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi </font></center></footer>
 </html>
