--- a/update.html
+++ b/update.html
@@ -33,7 +33,7 @@
 		<ul>
 			<li><font face="verdana" font size="3">Available 11 Attachment File</font></li>
 			<li><font face="verdana" font size="3">Add Attachment Options</font></li>
-			<li><font face="verdana" font size="3">Optimized Script</font></li> 
+			<li><font face="verdana" font size="3">Optimized Script</font></li>
 			<li><font face="verdana" font size="3">Optimized Version Checker</font></li>
 		</ul>
 		
@@ -136,5 +136,5 @@
 			<li><font face="verdana" font size="3">Fixed some bug</font></li>
 		</ul>
 	</body>
-	<footer><center><font size="3" font face="verdana">Copyright &copy; 2017 Yurani Corporation - Developer by Yusril Takeuchi </font></center></footer>
+	<footer><center><font size="3" font face="verdana">- Copyright &copy; 2017 Yurani Corporation -<br>- Developer by Yusril Takeuchi -</font></center></footer>
 </html>
