--- a/update.html
+++ b/update.html
@@ -4,22 +4,33 @@
         font-family: 'Open Sans', serif;
         font-size: 18px;
       }
+	  
+#body {
+    border: 1px solid #31393c;
+    background-color: #31393c;
+    padding-left: 20px;
+}
 </style>
 
 <html>
 <body bgcolor="#363f42">
 	<head>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<title>Navillera Mail Update Changelog</title>
 		<h2><font color="##1DABB8"><font face="verdana">Navillera Mail Update Changelog</font></h2>
-		<font color=white font face="verdana">This is a page for Navillera Mail update changelog. Every changelog will be showed here.</font>
+		<div id="desc">
+				<font color=white font face="verdana">This is a page for Navillera Mail update changelog. Every changelog will be showed here.</font>
+		</div>
+
 		
 	</head>
 	<body>
 		<hr>
+		<div id="body">
 		<h3><font color="##1DABB8"><font face="verdana">Update List</font></h4>
 		
 				<!--- VERSION V1.0.1.8 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.8</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.8</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Free & Premium Version</font></li>
 			<li><font face="verdana" font size="3">Add Serial Activation</font></li>
@@ -29,7 +40,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.1.6 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.6</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.6</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Available 11 Attachment File</font></li>
 			<li><font face="verdana" font size="3">Add Attachment Options</font></li>
@@ -38,20 +49,20 @@
 		</ul>
 		
 				<!--- VERSION V1.0.1.5 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.5</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.5</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Multiple Target Options</font></li>
 			<li><font face="verdana" font size="3">Fixed some bug</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.4-->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.4</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.4</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Removing a Naughtiness Tricks</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.3 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.3</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.3</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Change Button Style to Rounded</font></li>
 			<li><font face="verdana" font size="3">Change Amount Value to Trackbar</font></li>
@@ -62,7 +73,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.1.2 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.2</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.2</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Fixed Attachment Bug</font></li>
 		</ul>
@@ -74,17 +85,17 @@
 			<li><font face="verdana" font size="3">Add Feedback to Developer</font></li>
 			<li><font face="verdana" font size="3">Add Rating Star Feedback</font></li>
 			<li><font face="verdana" font size="3">Set Maximum Amount to 200</font></li>
-			<li><font face="verdana" font size="3">Greater Layout Size</font></li> 
+			<li><font face="verdana" font size="3">Greater Layout Size</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.0 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.0</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.0</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Fixed Crash When Sending Mail</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.8 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.8</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.8</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Hide/Change Sender Name</font></li>
 			<li><font face="verdana" font size="3">Add Gold, Woman Style, Moccasin Theme</font></li>
@@ -96,7 +107,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.6 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.6</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.6</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Moving Attachment Location</font></li>
 			<li><font face="verdana" font size="3">Add Theme Settings</font></li>
@@ -105,7 +116,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.5 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.5</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.5</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Multiple Attachment File</font></li>
 			<li><font face="verdana" font size="3">Add Account Selector</font></li>
@@ -113,7 +124,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.4 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.4</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.4</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Change Full Style</font></li>
 			<li><font face="verdana" font size="3">Fixed HTML Message Blank</font></li>
@@ -122,19 +133,21 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.3 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.3</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.3</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Removed Identity Soft</font></li>
 			<li><font face="verdana" font size="3">Removed Flood Number Text</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.2 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.2</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.2</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add color to Connectivity Stats</font></li>
 			<li><font face="verdana" font size="3">Fixed some bad english</font></li>
 			<li><font face="verdana" font size="3">Fixed some bug</font></li>
 		</ul>
+		</div>
+
 	</body>
 	<footer><center><font size="3" font face="verdana">- Copyright &copy; 2017 Yurani Corporation -<br>- Developed by Yusril Takeuchi -</font></center></footer>
 </html>
