--- a/update.html
+++ b/update.html
@@ -8,7 +8,6 @@
 #body {
     border: 1px solid #31393c;
     background-color: #31393c;
-    padding-left: 20px;
 }
 </style>
 
@@ -79,7 +78,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.1.1 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.1</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.1</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Fixed Some Bug In Attachment</font></li>
 			<li><font face="verdana" font size="3">Add Feedback to Developer</font></li>
