--- a/update.html
+++ b/update.html
@@ -29,7 +29,7 @@
 		<h3><font color="##1DABB8"><font face="verdana">Update List</font></h4>
 		
 				<!--- VERSION V1.0.1.8 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.8</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.8</font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Free & Premium Version</font></li>
 			<li><font face="verdana" font size="3">Add Serial Activation</font></li>
