--- a/update.html
+++ b/update.html
@@ -29,17 +29,17 @@
 		<h3><font color="##1DABB8"><font face="verdana">Update List</font></h4>
 		
 				<!--- VERSION V1.0.1.8 -->
-		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.8</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.8<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Free & Premium Version</font></li>
 			<li><font face="verdana" font size="3">Add Serial Activation</font></li>
-			<li><font face="verdana" font size="3">Add Submenu in Settings</font></li>  
+			<li><font face="verdana" font size="3">Add Submenu in Settings</font></li>
 			<li><font face="verdana" font size="3">Add Update Page</font></li>
 			<li><font face="verdana" font size="3">Removing Donate Page</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.6 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.6</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.6<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Available 11 Attachment File</font></li>
 			<li><font face="verdana" font size="3">Add Attachment Options</font></li>
@@ -48,20 +48,20 @@
 		</ul>
 		
 				<!--- VERSION V1.0.1.5 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.5</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.5<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Multiple Target Options</font></li>
 			<li><font face="verdana" font size="3">Fixed some bug</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.4-->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.4</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.4<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Removing a Naughtiness Tricks</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.3 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.3</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.3<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Change Button Style to Rounded</font></li>
 			<li><font face="verdana" font size="3">Change Amount Value to Trackbar</font></li>
@@ -72,13 +72,13 @@
 		</ul>
 		
 				<!--- VERSION V1.0.1.2 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.2</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.2<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Fixed Attachment Bug</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.1 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.1</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.1<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Fixed Some Bug In Attachment</font></li>
 			<li><font face="verdana" font size="3">Add Feedback to Developer</font></li>
@@ -88,13 +88,13 @@
 		</ul>
 		
 				<!--- VERSION V1.0.1.0 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.1.0</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.0<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Fixed Crash When Sending Mail</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.8 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.8</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.8<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Hide/Change Sender Name</font></li>
 			<li><font face="verdana" font size="3">Add Gold, Woman Style, Moccasin Theme</font></li>
@@ -106,7 +106,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.6 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.6</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.6<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Moving Attachment Location</font></li>
 			<li><font face="verdana" font size="3">Add Theme Settings</font></li>
@@ -115,7 +115,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.5 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.5</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.5<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add Multiple Attachment File</font></li>
 			<li><font face="verdana" font size="3">Add Account Selector</font></li>
@@ -123,7 +123,7 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.4 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.4</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.4<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Change Full Style</font></li>
 			<li><font face="verdana" font size="3">Fixed HTML Message Blank</font></li>
@@ -132,14 +132,14 @@
 		</ul>
 		
 				<!--- VERSION V1.0.0.3 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.3</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.3<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Removed Identity Soft</font></li>
 			<li><font face="verdana" font size="3">Removed Flood Number Text</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.2 -->
-		<h4><font color="##1DABB8"><font face="verdana"><i class="material-icons">attachment</i>V1.0.0.2</font></h4>
+		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.2<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Add color to Connectivity Stats</font></li>
 			<li><font face="verdana" font size="3">Fixed some bad english</font></li>
