--- a/update.html
+++ b/update.html
@@ -31,18 +31,18 @@
 				<!--- VERSION V1.0.1.8 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.8<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Add Free & Premium Version</font></li>
-			<li><font face="verdana" font size="3">Add Serial Activation</font></li>
-			<li><font face="verdana" font size="3">Add Submenu in Settings</font></li> 
-			<li><font face="verdana" font size="3">Add Update Page</font></li>
-			<li><font face="verdana" font size="3">Removing Donate Page</font></li>
+			<li><font face="verdana" font size="3">Added Free & Premium Version</font></li>
+			<li><font face="verdana" font size="3">Added Serial Activation</font></li>
+			<li><font face="verdana" font size="3">Added Submenu in Settings</font></li>
+			<li><font face="verdana" font size="3">Added Update Page</font></li>
+			<li><font face="verdana" font size="3">Removed Donate Page</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.6 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.6<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Available 11 Attachment File</font></li>
-			<li><font face="verdana" font size="3">Add Attachment Options</font></li>
+			<li><font face="verdana" font size="3">Added Attachment Options</font></li>
 			<li><font face="verdana" font size="3">Optimized Script</font></li>
 			<li><font face="verdana" font size="3">Optimized Version Checker</font></li>
 		</ul>
@@ -50,14 +50,14 @@
 				<!--- VERSION V1.0.1.5 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.5<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Add Multiple Target Options</font></li>
-			<li><font face="verdana" font size="3">Fixed some bug</font></li>
+			<li><font face="verdana" font size="3">Added Multiple Target Options</font></li>
+			<li><font face="verdana" font size="3">Fixed some bugs</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.4-->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.4<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Removing a Naughtiness Tricks</font></li>
+			<li><font face="verdana" font size="3">Removed a Naughtiness Tricks</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.3 -->
@@ -66,23 +66,23 @@
 			<li><font face="verdana" font size="3">Change Button Style to Rounded</font></li>
 			<li><font face="verdana" font size="3">Change Amount Value to Trackbar</font></li>
 			<li><font face="verdana" font size="3">Disable SMTP Options When Use Default Account</font></li>
-			<li><font face="verdana" font size="3">Fixed Feedback Bug</font></li>
-			<li><font face="verdana" font size="3">Add New Icon</font></li>
-			<li><font face="verdana" font size="3">Add Notification Success</font></li>
+			<li><font face="verdana" font size="3">Fixed Feedback bugs</font></li>
+			<li><font face="verdana" font size="3">Added New Icon</font></li>
+			<li><font face="verdana" font size="3">Added Notification Success</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.2 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.2<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Fixed Attachment Bug</font></li>
+			<li><font face="verdana" font size="3">Fixed Attachment bugs</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.1.1 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.1<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Fixed Some Bug In Attachment</font></li>
-			<li><font face="verdana" font size="3">Add Feedback to Developer</font></li>
-			<li><font face="verdana" font size="3">Add Rating Star Feedback</font></li>
+			<li><font face="verdana" font size="3">Fixed Some bugs In Attachment</font></li>
+			<li><font face="verdana" font size="3">Added Feedback to Developer</font></li>
+			<li><font face="verdana" font size="3">Added Rating Star Feedback</font></li>
 			<li><font face="verdana" font size="3">Set Maximum Amount to 200</font></li>
 			<li><font face="verdana" font size="3">Greater Layout Size</font></li>
 		</ul>
@@ -96,12 +96,12 @@
 				<!--- VERSION V1.0.0.8 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.8<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Add Hide/Change Sender Name</font></li>
-			<li><font face="verdana" font size="3">Add Gold, Woman Style, Moccasin Theme</font></li>
-			<li><font face="verdana" font size="3">Add Stop Function</font></li>
-			<li><font face="verdana" font size="3">Add Auto Update Features!</font></li>
-			<li><font face="verdana" font size="3">Add News Information</font></li>
-			<li><font face="verdana" font size="3">Add Multiple Target</font></li>
+			<li><font face="verdana" font size="3">Added Hide/Change Sender Name</font></li>
+			<li><font face="verdana" font size="3">Added Gold, Woman Style, Moccasin Theme</font></li>
+			<li><font face="verdana" font size="3">Added Stop Function</font></li>
+			<li><font face="verdana" font size="3">Added Auto Update Features!</font></li>
+			<li><font face="verdana" font size="3">Added News Information</font></li>
+			<li><font face="verdana" font size="3">Added Multiple Target</font></li>
 			<li><font face="verdana" font size="3">Fixed Freeze when Send Mail</font></li>
 		</ul>
 		
@@ -109,17 +109,17 @@
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.6<i class="material-icons">attachment</i></font></h4>
 		<ul>
 			<li><font face="verdana" font size="3">Moving Attachment Location</font></li>
-			<li><font face="verdana" font size="3">Add Theme Settings</font></li>
-			<li><font face="verdana" font size="3">Fixed some bug</font></li>
+			<li><font face="verdana" font size="3">Added Theme Settings</font></li>
+			<li><font face="verdana" font size="3">Fixed some bugs</font></li>
 			<li><font face="verdana" font size="3">Set Max Amount to 50</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.5 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.5<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Add Multiple Attachment File</font></li>
-			<li><font face="verdana" font size="3">Add Account Selector</font></li>
-			<li><font face="verdana" font size="3">Add Progressbar Stats</font></li>
+			<li><font face="verdana" font size="3">Added Multiple Attachment File</font></li>
+			<li><font face="verdana" font size="3">Added Account Selector</font></li>
+			<li><font face="verdana" font size="3">Added Progressbar Stats</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.4 -->
@@ -127,8 +127,8 @@
 		<ul>
 			<li><font face="verdana" font size="3">Change Full Style</font></li>
 			<li><font face="verdana" font size="3">Fixed HTML Message Blank</font></li>
-			<li><font face="verdana" font size="3">Fixed some bug</font></li>
-			<li><font face="verdana" font size="3">Add some little features</font></li>
+			<li><font face="verdana" font size="3">Fixed some bugs</font></li>
+			<li><font face="verdana" font size="3">Added some little features</font></li>
 		</ul>
 		
 				<!--- VERSION V1.0.0.3 -->
@@ -141,9 +141,9 @@
 				<!--- VERSION V1.0.0.2 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.0.2<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Add color to Connectivity Stats</font></li>
+			<li><font face="verdana" font size="3">Added color to Connectivity Stats</font></li>
 			<li><font face="verdana" font size="3">Fixed some bad english</font></li>
-			<li><font face="verdana" font size="3">Fixed some bug</font></li>
+			<li><font face="verdana" font size="3">Fixed some bugs</font></li>
 		</ul>
 		</div>
 
