--- a/update.html
+++ b/update.html
@@ -35,6 +35,8 @@
 			<li><font face="verdana" font size="3">Added Serial Activation</font></li>
 			<li><font face="verdana" font size="3">Added Submenu in Settings</font></li>
 			<li><font face="verdana" font size="3">Added Update Page</font></li>
+			<li><font face="verdana" font size="3">Added Random News</font></li>
+			<li><font face="verdana" font size="3">Added Mail Console Edition</font></li>
 			<li><font face="verdana" font size="3">Removed Donate Page</font></li>
 		</ul>
 		
