--- a/update.html
+++ b/update.html
@@ -31,7 +31,7 @@
 				<!--- VERSION V1.0.1.9 -->
 		<h4><font color="##1DABB8"><font face="verdana">V1.0.1.9<i class="material-icons">attachment</i></font></h4>
 		<ul>
-			<li><font face="verdana" font size="3">Added Save Form Settings</font></li>
+			<li><font face="verdana" font size="3">Added Save Current Settings</font></li>
 			<li><font face="verdana" font size="3">Optimized Theme Settings</font></li>
 			<li><font face="verdana" font size="3">Fixed License Bug</font></li>
 			<li><font face="verdana" font size="3">Fixed Some Bugs</font></li>
