--- a/Tabunganku/Verifikasi.html
+++ b/Tabunganku/Verifikasi.html
@@ -131,8 +131,8 @@ footer {
 		<br />
 		<div class="backlink">
 		<p>
-		<a target="_blank" href="http://yuranicorp.blogspot.co.id/search/label/Software"><img src="Aplikasi.png" alt="Kumpulan Aplikasi Yurani Corp" align="middle"></a>
-		<a target="_blank" href="http://yuranicorp.blogspot.co.id/p/donasi.html"><img src="Donasi.png" alt="Kumpulan Aplikasi Yurani Corp" align="middle"></a>
+		<a target="_blank" href="http://yuranicorp.blogspot.co.id/search/label/Software"><img src="https://yuranicorp.github.io/Tabunganku/Aplikasi.png" alt="Kumpulan Aplikasi Yurani Corp" align="middle"></a>
+		<a target="_blank" href="http://yuranicorp.blogspot.co.id/p/donasi.html"><img src="https://yuranicorp.github.io/Tabunganku/Donasi.png" alt="Kumpulan Aplikasi Yurani Corp" align="middle"></a>
 		</p>
 		</div>
 		
