--- a/Tabunganku/Verifikasi.html
+++ b/Tabunganku/Verifikasi.html
@@ -143,7 +143,7 @@ footer {
 			<br />
 			<center>
 			Anda menerima alamat email ini karena telah melakukan pendaftaran pada salah satu aplikasi
-			<br />buatan Yurani Corporation. Jangan lewatkan email kami dengan menambahkan <b>yuranicorp@gmail.com</b> pada kontak email Anda.
+			<br />buatan Yurani Corporation. Jangan lewatkan email kami dengan <br />menambahkan <b>yuranicorp@gmail.com</b> pada kontak email Anda.
 			<br />
 			<br />
 			</center>
