--- a/Tabunganku/Verifikasi.html
+++ b/Tabunganku/Verifikasi.html
@@ -100,8 +100,8 @@ footer {
 	</head>
 	
 	<body>
-		
-		<font size=4>Hi, <b>Username</b></font>!
+		<br />
+		<font size=4>Hi, <b>Username!</b></font>
 		<hr>
 		Terima kasih karena telah melakukan pendaftaran akun pada aplikasi Tabunganku.
 		<br />
