--- a/Tabunganku/Admin.html
+++ b/Tabunganku/Admin.html
@@ -89,7 +89,7 @@ footer {
 
 }
 	</style>
-		<title>Verifikasi Tabunganku</title>
+		<title>Laporan Pendaftaran Akun</title>
 		<div class="header">
 			<center><b>Laporan Pendaftaran Akun</b></center>
 		</div>
