--- a/Tabunganku/Success.html
+++ b/Tabunganku/Success.html
@@ -89,7 +89,7 @@ footer {
 
 }
 	</style>
-		<title>Verifikasi Tabunganku</title>
+		<title>Pendaftaran Tabunganku</title>
 		<div class="header">
 			<center><b>Pendaftaran Sukses!</b></center>
 		</div>
