--- a/Tabunganku/Admin.html
+++ b/Tabunganku/Admin.html
@@ -119,7 +119,7 @@ footer {
 			<li><b>Email&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;:</b> field_email</li>
 			<li><b>Nama Tampilan&emsp;:</b> field_namaTampilan</li>
 			<li><b>IP Address&emsp;&emsp;&emsp; :</b> field_ip</li>
-			<li><b>IP Lokasi&emsp;&emsp;&emsp;&emsp;:</b> field_ipLokasi</li>
+			<li><b>IP Lokasi&emsp;&emsp;&emsp;&emsp;:</b> field_Lokasi</li>
 		</ul>
 		</p>
 		
